# route/v1/users.js
@@ -7,5 +7,7 @@ router.get("/",userController.getUsers)
         .get("/:user_id/detail",userController.getUsersById)
         .post("/login",userController.loginUsers)
         .post("/create",userController.createUser)
+        .delete("/:user_id/delete", userController.deleteUsersById)
+        .patch("/:user_id/update", userController.updateUsersById)
 
 module.exports = router;
